Added AWS Iot Mobile Hub to project.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,4 @@
 <resources>
     <string name="app_name">IotPiControllerAndroid</string>
+    <string name="title">Pi Controller</string>
 </resources>
